--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
   },
   "homepage": "https://github.com/fakhriddin01/add_site#readme",
   "dependencies": {
+    "busboy": "^1.6.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "express-handlebars": "^6.0.6",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "uuidv4": "^6.2.13"
   }
 }
