--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "express-handlebars": "^6.0.6",
+    "express-session": "^1.17.3",
     "nodemon": "^2.0.20",
     "uuidv4": "^6.2.13"
   }
