--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
   },
   "homepage": "https://github.com/fakhriddin01/add_site#readme",
   "dependencies": {
+    "body-parser": "^1.20.1",
     "busboy": "^1.6.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
+    "handlebars-paginate": "^0.1.0",
+    "joi": "^17.7.0",
     "jsonwebtoken": "^9.0.0",
     "nodemon": "^2.0.20",
     "uuidv4": "^6.2.13"
